[FIX] website_animate: fix wrapwrap overflow and animations
Before this commit, on iPhone 8 (and lower) it was possible to scroll
the page to the right when there were animated elements in the page.

A "transform: none" property was applied to non-visible animated
elements to prevent the page from expanding to the right. However, this
property wasn't properly overriding keyframe transforms on iPhone 8 and
lower. This has been resolved by using "animation: none", in addition to
"transform: none".

Steps to reproduce the issue:

- On iPhone 8 (Safari).
- Drop a few snippets into a page.
- Add a "Fade In-Right" animation to one of the snippets.
- Scrolls the page so that the animated element is invisible.
- Bug => a horizontal scrollbar appears and it is possible to scroll the
page to the right.

opw-3165651

--- a/website_animate/static/src/scss/o_animate_frontend.scss
+++ b/website_animate/static/src/scss/o_animate_frontend.scss
@@ -13,6 +13,9 @@
 
     &:not(.o_animating):not(.o_animate_in_dropdown) {
         transform: none !important;
+        // Fix for "transform: none" not overridding keyframe transforms on
+        // iPhone 8 and lower.
+        animation: none;
     }
 }
 .o_animate_preview {
